ansible/playbooks/cluster/efk-logging-stack/roles/kibana/templates/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: efk-logging
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
    - port: 5601
  type: ClusterIP
