ansible/playbooks/cluster/efk-logging-stack/roles/kibana/templates/kibana-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kibana
  namespace: efk-logging
spec:
  podSelector:
    matchLabels:
      app: kibana
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - protocol: TCP
          port: 5601
